src-liberty_parse-2.6/test/example.coloncell.lib
library (a) {
  cell (b:c) {  /* colon in cellname */
    area : 10*5;
  }
}
